# EngSoft

./: Card.h  Company.cc  Company.h  Game.cc  Game.h  MainScreen.cc  MainScreen.h  Makefile  Player.cc  Player.h  Question.h  README.md  game  main.cc  mainScreen
TioPastinhas/doc/: avaliacao_requisitos_1.txt  requisitos.txt  todo.txt
TioPastinhas/misc/buttons/: add_btn.xcf
TioPastinhas/misc/data/: questions
TioPastinhas/misc/images/: avatar.xcf
TioPastinhas/src/: CMakeLists.txt  Doxyfile  main.cc
TioPastinhas/src/Allegro/: Allegro.hpp  Button.hpp  Font.hpp  Image.hpp
TioPastinhas/src/Card/: CMakeLists.txt
TioPastinhas/src/Company/: CMakeLists.txt  Company.cc  Company.h
TioPastinhas/src/Config/: Config.hpp
TioPastinhas/src/Game/: .Game.cc.swp  .Game.cpp.swp  CMakeLists.txt  Card.hpp  Company.hpp  Data.hpp  Game.cpp  Game.h  Game.hpp  Player.hpp  Question.hpp
TioPastinhas/src/Player/: CMakeLists.txt  Player.h
TioPastinhas/src/Question/: CMakeLists.txt
TioPastinhas/src/Screen/: .Main.cpp.swp  .Splash.cpp.swp  CMakeLists.txt  Config.cpp  Config.hpp  End.cpp  End.hpp  Main.cpp  Main.hpp  MainScreen.cc  Screen.cc  Screen.cpp  Screen.h  Screen.hpp  Splash.cpp  Splash.hpp
doc/: todo.txt
doc/www/html/: Card_8h__incl.map  Card_8h__incl.md5  Card_8h_source.html  Company_8h__dep__incl.md5  Config_8cc.html  Config_8cc__incl.md5  Config_8h.html  Config_8h__dep__incl.map  Config_8h_source.html  Game_8cc.html  Game_8cc__incl.map  Game_8cc__incl.md5  Game_8h__dep__incl.map  Game_8h__incl.map  MainScreen_8cc.html  MainScreen_8cc__incl.map  MainScreen_8h.html  MainScreen_8h__dep__incl.md5  MainScreen_8h__incl.map  MainScreen_8h_source.html  Player_8cc__incl.map  Player_8cc__incl.md5  Question_8cc.html  Question_8h.html  Question_8h__dep__incl.map  Question_8h__incl.map  Question_8h__incl.md5  Question_8h_source.html  annotated.html  (+27 more)
misc/avatar/: info.xcf
misc/buttons/: action.xcf  arrow_btn.xcf  menu_btn.xcf  tick_btn.xcf
misc/data/: events  questions
misc/images/: config.xcf  speedgames.xcf
src/: CMakeLists.txt  main.cpp
src/Allegro/: Button.hpp  Font.hpp  Image.hpp  Keyboard.hpp  Sound.hpp
src/Config/: Config.hpp  Error.hpp
src/Game/: .Game.hpp.swp  CMakeLists.txt  Card.hpp  Data.hpp  Game.cpp  Game.hpp  Player.hpp  Question.hpp
src/Player/: CMakeLists.txt
src/Screen/: Config.cpp  Config.hpp  End.cpp  End.hpp  Main.cpp  Main.hpp  Screen.hpp  Splash.cpp  Splash.hpp
(+226 files in other folders)
